syntax = "proto3";
package pb;

import "user.proto";
import "permissions.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message AddUserToFamilyRequest {
    string user_id = 1;
    bool can_read = 2;
    bool can_edit = 3;
    bool can_create = 4;
    bool can_modify = 5;
}

message AddUserToFamilyResponse {
    User user = 1;
    Permissions permissions = 2;
}